{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 17,
  "lineage": "76d9bdca-d0e8-e38d-7afa-6196d25f2e97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "princewill_proj_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:456555753493:internet-gateway/igw-06186d3f650ce4f8e",
            "id": "igw-06186d3f650ce4f8e",
            "owner_id": "456555753493",
            "tags": {
              "Name": "princewill_proj-igw"
            },
            "tags_all": {
              "Name": "princewill_proj-igw"
            },
            "vpc_id": "vpc-05a596b408f602957"
          },
          "dependencies": [
            "aws_vpc.princewill_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "princewill_proj_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:456555753493:route-table/rtb-068b9e9c4321394a2",
            "id": "rtb-068b9e9c4321394a2",
            "owner_id": "456555753493",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06186d3f650ce4f8e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "princewill_proj-route-table"
            },
            "tags_all": {
              "Name": "princewill_proj-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a596b408f602957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.princewill_proj_igw",
            "aws_vpc.princewill_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035ea7f61f8a5aa79",
            "route_table_id": "rtb-068b9e9c4321394a2",
            "subnet_id": "subnet-0d1d17653ad66b46f"
          },
          "dependencies": [
            "aws_internet_gateway.princewill_proj_igw",
            "aws_route_table.princewill_proj_route_table",
            "aws_subnet.princewill_proj_subnet",
            "aws_vpc.princewill_proj_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d79dd14765e0162e",
            "route_table_id": "rtb-068b9e9c4321394a2",
            "subnet_id": "subnet-0f1d3720d72e0bec3"
          },
          "dependencies": [
            "aws_internet_gateway.princewill_proj_igw",
            "aws_route_table.princewill_proj_route_table",
            "aws_subnet.princewill_proj_subnet",
            "aws_vpc.princewill_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "princewill_proj_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:456555753493:security-group/sg-02af630c7a57a9a91",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02af630c7a57a9a91",
            "ingress": [],
            "name": "terraform-20240909103439495700000005",
            "name_prefix": "terraform-",
            "owner_id": "456555753493",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "princewill_proj-cluster-sg"
            },
            "tags_all": {
              "Name": "princewill_proj-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a596b408f602957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.princewill_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "princewill_proj_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:456555753493:security-group/sg-0a6453787f51e016d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6453787f51e016d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240909103439568600000006",
            "name_prefix": "terraform-",
            "owner_id": "456555753493",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "princewill_proj-node-sg"
            },
            "tags_all": {
              "Name": "princewill_proj-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a596b408f602957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.princewill_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "princewill_proj_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:456555753493:subnet/subnet-0d1d17653ad66b46f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1d17653ad66b46f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "456555753493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "princewill_proj-subnet-0"
            },
            "tags_all": {
              "Name": "princewill_proj-subnet-0"
            },
            "vpc_id": "vpc-05a596b408f602957"
          },
          "dependencies": [
            "aws_vpc.princewill_proj_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:456555753493:subnet/subnet-0f1d3720d72e0bec3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1d3720d72e0bec3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "456555753493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "princewill_proj-subnet-1"
            },
            "tags_all": {
              "Name": "princewill_proj-subnet-1"
            },
            "vpc_id": "vpc-05a596b408f602957"
          },
          "dependencies": [
            "aws_vpc.princewill_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "princewill_proj_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:456555753493:vpc/vpc-05a596b408f602957",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0256ca9f1810d1ee3",
            "default_route_table_id": "rtb-0a5ff470a8acc92a8",
            "default_security_group_id": "sg-0a7d3a23e7e2af560",
            "dhcp_options_id": "dopt-0103f22f737d2b964",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a596b408f602957",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5ff470a8acc92a8",
            "owner_id": "456555753493",
            "tags": {
              "Name": "princewill_proj-vpc"
            },
            "tags_all": {
              "Name": "princewill_proj-vpc"
            }
          }
        }
      ]
    }
  ]
}